--- a/.github/workflows/macMain.yml
+++ b/.github/workflows/macMain.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-node@v2-beta
         
       - name: install TS
-        run: npm install typescript
+        run: npm install -g typescript
       
       - name: npm install
         run: npm install
